fido/mac: Add |CountWebAuthnCredentials| method.

CountWebAuthnCredentials counts the number of Touch ID WebAuthn
credentials stored in the keychain for a given profile with a creation
date in a given interval. This will be used to implement a counter label
for these credentials in the browsing data deletion dialog.

Bug: 879548
Change-Id: Iacac0ee3c13f69a0b7f9ea1c1f2e1b10f0ce949e
Reviewed-on: https://chromium-review.googlesource.com/1239537
Commit-Queue: Martin Kreichgauer <martinkr@google.com>
Reviewed-by: Adam Langley <agl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593785}
Former-commit-id: 62e723e2f1a1a361404770cc922a1c3cf6dde25e